# ContextMatch1

./: .gitattributes  .gitignore  PROJECT_HANDOFF.md  PROJECT_PLAN.md  README.md  compare_reviews.py  fix_pipeline.py  knowledge_base.json  pyproject.toml  requirements-server.txt  team_xxx.csv  test_reasoning.py  top_700.jsonl  trim.py  vllm_log.txt
Final_Results/: stage_1_calibration_comparison.csv  stage_1_calibration_predictions.jsonl  stage_2_individual_assessments.jsonl  stage_2_individual_ranking.csv  stage_3_comparative_assessments.jsonl  stage_3_comparative_ranking.csv  team_xxx.csv
calibrations/: anchors.json  holdout.json  repor  review  reviews.json  stage_1_calibration_comparison.csv  stage_1_calibration_predictions.jsonl
contextmatch/: __init__.py  calibration.py  cli.py  data.py  integrity.py  llm.py  models.py  output.py  pipeline.py  prompts.py  rerank.py  rubric.py  stage_outputs.py
knowledge_base/: README.md  __init__.py  build_knowledge_base.py  validate_knowledge_base.py
ru/: initial_scores.jsonl  post_repeat_scores.jsonl  reasonings.json  run_report.json  stage_2_individual_assessments.jsonl  stage_3_comparative_assessments.jsonl  stage_3_comparative_ranking.csv
scripts/: start_vllm.sh
tests/: conftest.py  test_calibration.py  test_integrity.py  test_integrity_knowledge_base.py  test_knowledge_base.py  test_output.py  test_pipeline.py  test_rerank.py  test_rubric.py  test_stage_outputs.py
