[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextmatch"
version = "0.1.0"
description = "Qwen-based candidate calibration and ranking pipeline"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.20",
  "openai>=1.54.4",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
contextmatch = "contextmatch.cli:main"

[tool.setuptools.packages.find]
include = ["contextmatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
